--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FFDAF50440042C0DE8EC858D2AEB3535
 ProjectName=Third Person Game Template
+
+[/Script/Engine.GameSession]
+MaxPlayers=100
